# COMPANY_RESEARCH_AGENT

./: .dockerignore  Dockerfile  Jenkinsfile  README.md  build_ready_db_from_consolidated_csv.py  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt  test_llm_providers.py  test_sambanova_api_key.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
data/: companies.json  parameters.template.csv
outputs/: consolidated_validated.csv  consolidated_validated.json  ready_for_db_push.csv  ready_for_db_push.json
outputs/individual_json/: Tech_Mahindra.json
pytests/: conftest.py
pytests/data/: sample_companies.csv  sample_companies.xlsx
pytests/rules/: logo_rules.py  numeric_rules.py  rules.json  text_rules.py
pytests/tests/: llm_output_harness.py  test_agent1_outputs.py  test_cases10_1.py  test_cases6_3.py  test_cases7_1.py  test_cases7_2.py  test_cases7_3.py  test_cases7_4.py  test_cases7_5.py  test_cases7_6.py  test_cases8_1.py  test_cases8_2.py  test_cases8_5.py  test_cases8_6.py  test_cases9_3.py  test_consolidated_csv_outputs.py  test_csv_validation.py  test_data_format_contract.py  test_excel_validation.py  test_pydantic_output_contract.py  test_validation_against_data.py
research_agent/: cli.py  collector.py  consolidator.py  db_push_export.py  langgraph_workflow.py  llm_provider.py  llm_test_data_formatter.py  observability.py  prompts.py  pydantic_163.py  schema.py  supabase_sync.py  table_parser.py  validation.py
(+9 files in other folders)
