[project]
name = "research-agent"
version = "0.1.0"
description = "LangChain-based data collector and validator for company intelligence schema."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.0.1",
]
